[package]
name = "termsand"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle-parse = "0.2.5"
clap = { version = "4.5.15", features = ["derive"] }
crossterm = "0.28.1"
rand = "0.8.5"
term_size = "0.3.2"
